--- a/participant_portal/styles/_uswds-theme-custom-styles.scss
+++ b/participant_portal/styles/_uswds-theme-custom-styles.scss
@@ -22,6 +22,13 @@ i.e.
 
 @use "uswds-core" as *;
 
+// Header:
+// Set custom background and text colors.
+.header {
+  background-color: #162e51;
+  color: #fff;
+}
+
 // Sticky footer:
 // USWDS surprisingly doesn't support this with any of their utilities or components.
 .container {
