Set font to public sans.

--- a/participant/styles/_uswds-theme.scss
+++ b/participant/styles/_uswds-theme.scss
@@ -16,5 +16,6 @@ in the form $setting: value,
   $theme-font-path: '/uswds/fonts',
   $theme-image-path: '/uswds/img',
   $theme-type-scale-lg: 7,
-  $theme-header-logo-text-width: 100%
+  $theme-header-logo-text-width: 100%,
+  $theme-font-type-sans: 'public-sans'
 );
