Align process list margins with eligibility screener.

--- a/participant/styles/_uswds-theme-custom-styles.scss
+++ b/participant/styles/_uswds-theme-custom-styles.scss
@@ -41,7 +41,14 @@ i.e.
   flex: 1;
 }
 
-// Override arbitrary list max width
+// USWDS List:
+// Override arbitrary max width
 .usa-list li {
   max-width: 100%;
+}
+
+// USWDS Process List:
+// Remove margin on last child
+.usa-process-list__item:last-child {
+  padding-bottom: 0;
 }
