Drop margin top for first fieldset legend in a card body that has a card header.

--- a/participant/styles/_uswds-theme-custom-styles.scss
+++ b/participant/styles/_uswds-theme-custom-styles.scss
@@ -66,3 +66,11 @@ i.e.
 .usa-card-group ul {
   list-style-type: disc;
 }
+
+// USWDS Card:
+// Drop large first margin-top
+.usa-card__header + .usa-card__body {
+  .usa-fieldset:first-child .usa-legend {
+    margin-top: 0;
+  }
+}
