--- a/participant/styles/_uswds-theme-custom-styles.scss
+++ b/participant/styles/_uswds-theme-custom-styles.scss
@@ -102,3 +102,9 @@ p + .usa-list {
 .usa-card__heading {
   font-family: family('sans');
 }
+
+// USWDS Label:
+// Remove form limit
+.usa-label {
+  max-width: 100%;
+}
