--- a/participant/styles/_uswds-theme-custom-styles.scss
+++ b/participant/styles/_uswds-theme-custom-styles.scss
@@ -76,6 +76,11 @@ p {
   @include u-line-height('sans', 2); // ~25px
 }
 
+.usa-hint
+{
+  @include u-text('normal');
+}
+
 
 // USWDS List:
 // Override arbitrary max width
