[PRP-221] Styling, content for uploader with tips, moving and enabling <FilePreview> to accept URLs, updating tests

--- a/participant/styles/_uswds-theme-custom-styles.scss
+++ b/participant/styles/_uswds-theme-custom-styles.scss
@@ -76,6 +76,9 @@ p {
   @include u-line-height('sans', 2); // ~25px
 }
 
+.usa-accordion span {
+  @include u-text('bold')
+}
 
 // USWDS List:
 // Override arbitrary max width
