--- a/staff/public/custom.css
+++ b/staff/public/custom.css
@@ -16,10 +16,10 @@
   font-weight: bold;
 }
 
-a {
-  color: #005ea2;
+main a {
+  color: #005ea2 !important;
 }
 
-a:hover {
-  color: #162e51;
+main a:hover {
+  color: #162e51 !important;
 }
