--- a/staff/public/custom.css
+++ b/staff/public/custom.css
@@ -1,3 +1,4 @@
+/* Add some overrides for table theming */
 .ag-theme-alpine .ag-cell {
   line-height: 1.3rem !important;
   padding-top: 5px;
@@ -12,10 +13,7 @@
   align-items: normal !important;
 }
 
-.name {
-  font-weight: bold;
-}
-
+/* Theme the link colors to match USWDS */
 main a {
   color: #005ea2 !important;
 }
@@ -24,6 +22,14 @@ main a:hover {
   color: #162e51 !important;
 }
 
+/* Disable the menu because we don't have a lot of pages */
 .ant-menu {
   display: none !important;
+}
+
+/* Add some custom theming:
+ * - Style names in the table as bold
+ */
+.name {
+  font-weight: bold;
 }
