[PRP-229] Layout, theme, i18n changes per comments

--- a/participant/styles/_uswds-theme-custom-styles.scss
+++ b/participant/styles/_uswds-theme-custom-styles.scss
@@ -144,3 +144,12 @@ p + .usa-list {
 .usa-fieldset > legend:first-of-type {
   margin-top: 0;
 }
+
+.review-section dt {
+  margin-bottom: units(0.5);
+}
+
+.review-section dd {
+  margin-left: 0;
+  margin-bottom: units(0.5);
+}
