[PRP-340] Changing label elements, correcting screen reader behavior. Updating i18n text

--- a/participant/styles/_uswds-theme-custom-styles.scss
+++ b/participant/styles/_uswds-theme-custom-styles.scss
@@ -54,6 +54,10 @@ p {
   pointer-events: auto;
 }
 
+.usa-label {
+  pointer-events: auto;
+}
+
 .usa-file-input__target:hover {
   border-color: #1a4480;
 }
